--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "NDc4NTYxNDg5OTUxOTE2MDM0.Xj3YUg.MA9MmE5spOiyrP5fNR8D9br-nSg",
-  "prefix": "mass!",
-  "id": "180449801400352768",
+  "token": "NzA3NjE2NTk1NzM5OTM0ODQx.Xrgvkw.aOzgKRJXUhI3DOCqeS6yTzLRHr4",
+  "prefix": "&send",
+  "id": "675975738423246849",
   "wait": "10"
 }
