--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "NzA3NjE2NTk1NzM5OTM0ODQx.Xrgvkw.aOzgKRJXUhI3DOCqeS6yTzLRHr4",
+  "token": "NzA3NjE2NTk1NzM5OTM0ODQx.XrgzVQ.Ohguos_jy2xWblzhPxr5j4IJZvI",
   "prefix": "&send",
   "id": "675975738423246849",
   "wait": "10"
